seleciondo elemento DOM

--- a/010-dom/003-selecionando-elemento/dom.html
+++ b/010-dom/003-selecionando-elemento/dom.html
@@ -20,6 +20,6 @@
       repellendus nesciunt alias quo eos. Sapiente rerum voluptates repellendus
       in!
     </p>
-    <script src="querySelector.js"></script>
+    <script src="dom.js"></script>
   </body>
 </html>
