--- a/013-encontrando-elementos/008-insertBefore/dom.html
+++ b/013-encontrando-elementos/008-insertBefore/dom.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,6 +10,7 @@
 
     <div class="container" id="container">
       <h1>Manipulando DOM</h1>
+
       <p class="paragrafo">
         1 CLASS = Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
         quia unde quaerat nam, ducimus explicabo tempore aspernatur, a pariatur
@@ -28,4 +29,3 @@
     <script src="dom.js"></script>
   </body>
 </html>
- -->
