--- a/014-eventos/005-preventing-default/dom.html
+++ b/014-eventos/005-preventing-default/dom.html
@@ -6,7 +6,7 @@
     <title>Eventos nivel 2</title>
   </head>
   <body>
-    <button>Acionar alert</button>
+    <a href="https://vidafullstack.com.br/" target="_blank">Vida FullStack</a>
 
     <script src="dom.js"></script>
   </body>
