--- a/014-eventos/006-event-delegation/dom.html
+++ b/014-eventos/006-event-delegation/dom.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,9 +6,11 @@
     <title>Eventos nivel 2</title>
   </head>
   <body>
-    <button>Acionar alert</button>
-
+    <ul id="menu">
+      <li class="home">Home</li>
+      <li class="sobre">Sobre</li>
+      <li class="contato">Contato</li>
+    </ul>
     <script src="dom.js"></script>
   </body>
 </html>
- -->
