--- a/014-eventos/007-event-validate/dom.html
+++ b/014-eventos/007-event-validate/dom.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eventos nivel 2</title>
+    <title>Validar Eventos</title>
   </head>
   <body>
-    <ul id="menu">
+    <ul>
       <li class="home">Home</li>
       <li class="sobre">Sobre</li>
       <li class="contato">Contato</li>
