--- a/015-formularios/003-manipulando-inputs/dom.html
+++ b/015-formularios/003-manipulando-inputs/dom.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -28,3 +28,4 @@
     <script src="dom.js"></script>
   </body>
 </html>
+ -->
