--- a/016-bug-debug/002-exeption/big.html
+++ b/016-bug-debug/002-exeption/big.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,3 +10,4 @@
     <script src="bug.js"></script>
   </body>
 </html>
+ -->
